minor changes before switching to window

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <!-- add nav bar here -->
-    <div class="grid-container" id="grid-container"></div>
+    <div class="page-container">
+      <div class="grid-container" id="grid-container"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
