--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
   <body>
     <!-- add nav bar here -->
     <div class="page-container">
+      <div class="btns">
+        <div class="slidecontainer">
+          <p>GRID SIZE:</p>
+          <input
+            type="range"
+            min="1"
+            max="50"
+            value="25"
+            class="slider"
+            id="myRange"
+          />
+          <p>Value: <span id="demo"></span></p>
+        </div>
+      </div>
       <div class="grid-container" id="grid-container"></div>
     </div>
     <script src="script.js"></script>
