--- a/index.html
+++ b/index.html
@@ -11,26 +11,42 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <!-- add link to fonts here -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Megrim&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- add nav bar here -->
     <div class="page-container">
       <div class="btns">
+        <button onclick="setScheme('pastel')">Pastel</button>
+        <label for="favcolor">Select your favorite color:</label>
+        <input
+          type="color"
+          id="favcolor"
+          name="favcolor"
+          onclick="setScheme('custom')"
+        />
+        <button onclick="setScheme('erase')">Erase</button>
+
         <div class="slidecontainer">
           <p>GRID SIZE:</p>
           <input
             type="range"
             min="1"
-            max="50"
-            value="25"
+            max="100"
+            value="50"
             class="slider"
             id="myRange"
           />
           <p>Value: <span id="demo"></span></p>
         </div>
       </div>
-      <div class="grid-container" id="grid-container"></div>
+      <div class="grid-container-column">
+        <h1 class="title">grixel</h1>
+        <div class="grid-container" id="grid-container"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
