removed .btns background. colored title

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         </div>
       </div>
       <div class="grid-container-column">
-        <h1 class="title">grixel</h1>
+        <h1 class="title">
+          <span id="g">g</span><span id="r">r</span><span id="i">i</span
+          ><span id="x">x</span><span id="e">e</span><span id="l">l</span>
+        </h1>
         <p class="instruction">Click in grid to start/stop drawing</p>
         <div class="grid-container" id="grid-container"></div>
       </div>
