--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     <!-- add nav bar here -->
     <div class="page-container">
       <div class="btns">
-        <div><button onclick="setScheme('pastel')">Pastel</button></div>
-        <div><button onclick="setScheme('erase')">Erase</button></div>
+        <div>
+          <button onclick="setScheme('pastel')" class="btn">Pastel</button>
+        </div>
+        <div>
+          <button onclick="setScheme('erase')" class="btn">Erase</button>
+        </div>
         <div class="colorInput">
           <label for="favcolor">CUSTOM COLOR:</label>
           <input
@@ -50,7 +54,7 @@
           <p>Grid Size: <span id="gridSize"></span></p>
         </div>
         <div>
-          <button class="clear" onclick="addDivs(gridSize)">Clear</button>
+          <button class="clear btn" onclick="addDivs(gridSize)">Clear</button>
         </div>
       </div>
       <div class="grid-container-column">
