removed unnecessary classes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div class="page-container">
       <div class="btns">
         <div>
-          <button onclick="setScheme('pastel')" class="btn">Pastel</button>
+          <button onclick="setScheme('pastel')">Pastel</button>
         </div>
         <div>
-          <button onclick="setScheme('erase')" class="btn">Erase</button>
+          <button onclick="setScheme('erase')">Erase</button>
         </div>
         <div class="colorInput">
           <label for="favcolor">CUSTOM COLOR:</label>
@@ -54,7 +54,7 @@
           <p>Grid Size: <span id="gridSize"></span></p>
         </div>
         <div>
-          <button class="clear btn" onclick="addDivs(gridSize)">Clear</button>
+          <button class="clear" onclick="addDivs(gridSize)">Clear</button>
         </div>
       </div>
       <div class="grid-container-column">
