made mobile responsive
still need to make touchscreen work

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!-- add nav bar here -->
     <div class="page-container">
       <div class="btns">
-        <div>
+        <div id="pastel">
           <button onclick="setScheme('pastel')">Pastel</button>
         </div>
-        <div>
+        <div id="erase">
           <button onclick="setScheme('erase')">Erase</button>
         </div>
         <div class="colorInput">
@@ -53,7 +53,7 @@
           />
           <p>Grid Size: <span id="gridSize"></span></p>
         </div>
-        <div>
+        <div id="clear">
           <button class="clear" onclick="addDivs(gridSize)">Clear</button>
         </div>
       </div>
