--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/6c80d95586.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="grixel-style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Megrim&display=swap"
@@ -66,6 +66,6 @@
         <div class="grid-container" id="grid-container"></div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="grixel-script.js"></script>
   </body>
 </html>
