added Soc Med meta tags

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     <link rel="manifest" href="https://amalfimakesit.com/site.webmanifest" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- social media display meta tags -->
+    <meta property="og:title" content="GRIXEL" />
+    <meta
+      property="og:description"
+      content="Get creative with this multi-featured pixel art canvas"
+    />
+    <meta
+      property="og:image"
+      content="https://amalfimakesit.com/images/grixelPreview.png"
+    />
+    <meta property="og:url" content="https://amalfimakesit.com/apps/Grixel" />
+    <meta name="twitter:card" content="summary_large_image" />
     <script
       src="https://kit.fontawesome.com/6c80d95586.js"
       crossorigin="anonymous"
