--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     />
     <meta property="og:url" content="https://amalfimakesit.com/apps/Grixel" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GRIXEL" />
+    <meta
+      name="twitter:description"
+      content="Get creative with this multi-featured pixel art canvas"
+    />
+    <meta name="twitter:site" content="@stevecorwin9" />
+    <meta
+      name="twitter:image"
+      content="https://github.com/PrinceCorwin/Grixel/blob/main/images/favicon/faviconMaster.png?raw=true"
+    />
+    <meta name="twitter:creator" content="@stevecorwin9" />
     <script
       src="https://kit.fontawesome.com/6c80d95586.js"
       crossorigin="anonymous"
